<resources>
    <string name="app_name">VndToDo</string>
    <string name="register_here">Register</string>
    <string name="txtMobile">Mobile(Only 10 digit number)</string>
    <string name="btnRegistration">Register</string>
    <string name="txtCreateAcc">create an Account</string>
    <string name="txtAlreadyAccount">Already have an account?(click here to Login)</string>
    <string name="empty_field">you have to fill the required field</string>
    <string name="invalid_name">please enter valid full name</string>
    <string name="invalid_email">enter valid email id</string>
    <string name="invalid_number">enter valid mobile number</string>
    <string name="invalid_pass">password length must be  greater than 8 letters</string>
    <string name="register_progress_dialog">Registering in progress...</string>
    <string name="register_success">registered successfully</string>
    <string name="no_internet">No internet connection</string>
    <string name="login_here">Login</string>
    <string name="txtForget">Forget Password?</string>
    <string name="btnLogin">Login</string>
    <string name="login_progress_dialog">logging in...</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="date_format_month">MMMM dd, yyyy HH:mm:ss</string>
    <string name="date_format">MM-dd-yyyy</string>
    <string name="note_saving">note is saving</string>
    <string name="addTodo_failure">note couldn\'t saved, you are not logged in</string>
    <string name="addTodo_success">note saved</string>
    <string name="updating">updating</string>
    <string name="update_success">data updated...</string>
    <string name="update_failure">can not update data</string>
    <string name="moving_to_trash_fail">moving to trash fail</string>
    <string name="moving_to_archieve">moving to archive</string>
    <string name="moving_to_archieve_success">moving to archive success</string>
    <string name="moving_to_archieve_fail">moving to archive fail</string>
    <string name="moving_to_note">moving to note</string>
    <string name="moving_to_note_success">moving to note success</string>
    <string name="moving_to_note_fail">moving to note fail</string>
    <string name="loading">loading</string>
    <string name="some_error">some errors</string>
    <string name="moving_to_trash">moving to trash</string>
    <string name="moving_to_trash_success">moving to trash</string>
</resources>
