<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dimen_16"
    android:layout_marginRight="@dimen/dimen_16"
    >
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        android:layout_gravity="center"
        android:src="@drawable/todologo" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_here"
        android:textSize="@dimen/dimen_30" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

    <!--Fullname edit-->
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editViewFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:hint="Enter your fullname"
        android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

        <!--Email Edit-->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="Enter your email id"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!--Mobile Text-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

        <!--Mobile Edit-->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editViewMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/txtMobile"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>
    <!--Password text-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

        <!--Password Edit-->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editViewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>
    <!--Registration Btn-->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/btnRegistration" />

    <!--Already Account-->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_50"
        android:text="@string/txtAlreadyAccount"
        android:textColor="@color/colorAccent" />




</LinearLayout>
    </ScrollView>